# Auth-Service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: docker.env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2026_03_25_2142-630f9757e92c_create_tables.py  2026_03_25_2143-55897ac14388_create_super_admin_role_and_user.py  2026_03_25_2152-5a20c0026484_create_permissions_for_superadmin_role.py  2026_03_27_1614-ccfddf304a04_add_normal_user_role.py  2026_03_27_1917-85d2f859db5b_create_unique_constraint_for_role_id_.py  2026_03_27_1931-8f74f49c81b0_add_server_default_values_in_access_.py  2026_03_29_1330-d96967c1f275_create_refresh_tokens_table.py  2026_03_31_1540-4812ac67aa13_change_datetime_without_timezone_into_.py
src/api/: __init__.py
src/api/admin/: route.py
src/api/auth/: route.py
src/api/mock/: router.py
src/api/user/: route.py
src/core/: config.py  logger.py
src/core/auth/: creation_tokens.py  security.py  tokens.py
src/models/: __init__.py  role.py  tokens.py  user.py
src/models/mixins/: banned_at_mixin.py  deleted_at_mixin.py  id_pk_mixin.py
src/repositories/: access_rules_repository.py  business_elem_repository.py  role.py  role_repository.py  token_repository.py  user_repository.py
src/schemas/: response_schemas.py  role.py  role_schemas.py  user.py  user_schemas.py
src/schemas/exceptions/: base.py  database.py  roles.py  security.py  token.py  users.py
src/services/: auth_service.py  business_elem_service.py  permission_service.py  user_service.py
